Change /etc/inputrc2 to /etc/inputrc

--- a/.inputrc
+++ b/.inputrc
@@ -1,5 +1,5 @@
 # Load system-wide /etc/inputrc
-$include /etc/inputrc2
+$include /etc/inputrc
 
 # Use the text that has already been typed as the prefix for searching through history
 # (more intelligent Up/Down arrow keys)
