--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule ".vim/bundle/nerdtree"]
 	path = .vim/bundle/nerdtree
 	url = https://github.com/scrooloose/nerdtree.git
+[submodule ".vim/bundle/vim-operator-highlight"]
+	path = .vim/bundle/vim-operator-highlight
+	url = https://github.com/Valloric/vim-operator-highlight.git
