--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule ".vim/bundle/vim-operator-highlight"]
 	path = .vim/bundle/vim-operator-highlight
 	url = https://github.com/Valloric/vim-operator-highlight.git
+[submodule ".vim/bundle/vim-fugitive"]
+	path = .vim/bundle/vim-fugitive
+	url = https://github.com/tpope/vim-fugitive.git
