Include ~/.gitconfig.local in ~/.gitconfig (for local customizations)

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,8 @@
 [color]
-	ui = auto
+    ui = auto
 [push]
-	default = simple
+    default = simple
 [alias]
-	hist = log --pretty=format:\"%C(auto)%h %ad | %s%d [%an]\" --graph --date=short
+    hist = log --pretty=format:\"%C(auto)%h %ad | %s%d [%an]\" --graph --date=short
+[include]
+    path = ~/.gitconfig.local
